# ParentShield

./: .env.production  package-lock.json  tsconfig.json  vercel.json
.github/workflows/: build.yml
scripts/: copy-builds-to-website.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/blocking/: blocklists.rs
src-tauri/src/blocking/process/: mod.rs
src-tauri/src/commands/: auth.rs  blocking.rs  license.rs
src-tauri/src/config/: storage.rs
src-tauri/src/daemon/: linux.rs  runner.rs
src/components/: SubscriptionLockScreen.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  switch.tsx
src/pages/: Activity.tsx  Alerts.tsx  Blocklist.tsx  Dashboard.tsx  FirstRun.tsx  LockScreen.tsx  Schedule.tsx  Settings.tsx
src/services/: api.ts
src/stores/: activity-store.ts  auth-store.ts  license-store.ts
website/: .env  .gitignore  Dockerfile  build.sh  fly.toml  render.yaml
website/app/: config.py  main.py
website/app/core/: dependencies.py  security.py
website/app/db/: database.py
website/app/db/migrations/: env.py
website/app/db/migrations/versions/: 5e8f7a21bc3d_add_downloads_installations.py  6f9a8b32cd4e_add_parental_controls.py  (+2 more)
website/app/models/: __init__.py  api_key.py  device.py  parental_controls.py  subscription.py  user.py
website/app/routers/: admin.py  api_keys.py  app_api.py  customer.py  device.py  public.py
website/app/schemas/: admin.py
website/app/services/: analytics_service.py  auth_service.py  sync_service.py  user_service.py
website/downloads/: .gitignore
website/frontend/: package-lock.json  package.json  tsconfig.json
website/frontend/prisma/: schema.prisma  seed.ts
website/frontend/scripts/: test-login.ts
website/frontend/src/: proxy.ts
website/frontend/src/app/: globals.css  layout.tsx  sitemap.ts
website/frontend/src/components/: coming-soon-page.tsx  theme-provider.tsx
website/frontend/src/hooks/: useAdminAuth.ts  useCustomerAuth.ts
website/frontend/src/lib/: api-response.ts  auth-client.ts  auth.ts  db.ts  logger.ts  rate-limit.ts  schemas.ts  validation.ts
website/frontend/src/services/: admin-api.ts  api-client.ts  customer-api.ts  index.ts
(+109 files in other folders)
