[package]
name = "parentshield"
version = "0.1.0"
description = "Cross-platform parental control software for blocking games and AI services"
authors = ["ParentShield"]
edition = "2021"
default-run = "parentshield"

[lib]
name = "parentshield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "parentshield-daemon"
path = "src/bin/daemon.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Security
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# DNS
hickory-resolver = "0.24"
hickory-server = "0.24"

# Cross-platform
directories = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for platform API
reqwest = { version = "0.12", features = ["json"] }

# Lazy initialization
once_cell = "1"

# System info
hostname = "0.4"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Regex for pattern matching
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
nix = { version = "0.29", features = ["process", "signal", "net", "fs", "user"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Services",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_Shutdown",
    "Win32_System_IO",
] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"
